--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         run: npm install
 
       - name: Build React App
+        env:
+          CI: ""
         run: npm run build
 
       - name: Deploy to GitHub Pages
