--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "ESLINT_NO_DEV_ERRORS=true react-scripts build",
+    "build:prod": "ESLINT_NO_DEV_ERRORS=true PUBLIC_URL=/react_app react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": ".",
   "eslintConfig": {
     "extends": [
       "react-app",
