--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "ESLINT_NO_DEV_ERRORS=true react-scripts build",
+    "build": "react-scripts build",
     "build:prod": "ESLINT_NO_DEV_ERRORS=true PUBLIC_URL=/react_app react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
